# ccbar

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  currency.rs  main.rs  render.rs  status.rs  style.rs
src/blocks/: context_bar.rs  cost.rs  dir.rs  duration.rs  git.rs  mod.rs  model.rs  rate_limit.rs  tokens.rs
