[package]
name = "ccbar"
version = "0.1.0"
edition = "2024"
description = "Fast, configurable statusline for Claude Code"
license = "MIT"
repository = "https://github.com/Saturate/ccbar"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
